working on the user's experience

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Explosive Choices
   		  <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-		    <li><a href="#">Fireworks</a></li>
-		    <li><a href="#">Demolition</a></li>
+		    <li id="fireBtn"><a href="#">Fireworks</a></li>
+		    <li id="demoBtn"><a href="#">Demolition</a></li>
 		  </ul>
 		</div>
 		<div class="clearfix"></div>
